# invoice_parser

./: .dockerignore  .env.docker.example  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  nginx.conf  pyproject.toml  pytest.ini  requirements.txt  requirements_paddleocr.txt
app/: custom_errors.py  logger.py  main.py  storage.py
app/api/v1/: router.py
app/api/v1/endpoints/: __init__.py  get_fio.py  pages.py  requests.py
app/database/: config.py  dependencies.py  models.py  queries_core.py  queries_orm.py
app/migrations/: recreate_table.py
app/models/: config.py  models.py
app/schemas/: main_schemas.py
app/static/: error404.html  global.css  global.js  script.js  style.css
app/static/404/: 404.css  404.html
app/static/index/: index.css  index.html  script.js  style.css
app/static/recognize/: recognize.css  recognize.html  recognize.js  script.js  style.css
app/static/requests/: requests.css  requests.html  requests.js
db/: config.py  database.py  db_tables.py  queries_core.py  queries_orm.py
helpers/: create_env_file.py  create_table.py  loading_paddleOCR.py  recreate_table.py  test_model.py
models/: config.py  models.py
notebooks/: langchain_lessons.ipynb  research.ipynb
schemas/: main_schemas.py
static/: error404.html  index.html  recognize.html  script.js  style.css
tests/: conftest.py  test_db.py  test_endpoints.py
